--- a/plugins/game/frame.html
+++ b/plugins/game/frame.html
@@ -36,9 +36,7 @@
     </div>
 
     <div id="chatBox">
-        <div id="chatContent">
-
-        </div>
+        <chat-window id="chatContent"></chat-window>
         <div id="chatInputBox">
             <input type="text" name="chatInput" id="chatInput" class="iinput">
         </div>
@@ -75,3 +73,6 @@
     <div id="editorControls"></div>
 
 </div>
+<script src="plugins/game/js/External/angular.min.js"></script>
+<script src="plugins/game/js/External/angular-sanitize.min.js"></script>
+<script src="plugins/game/js/ng/app.js"></script>
